# c-programming-a-modern-approach-king-2nd-edition

./: .gitignore  README.md  meson.build
chapter_1/: 3.c  3.h  4.c  4.h  6.c  6.h
src/: meson.build
src/chapter_1/: 3.c  3.h  3_main.c  4.c  4.h  4_main.c  6.h  6_main.c  7.h  7_main.c  8.c  meson.build
src/chapter_2/: 1_main.c  3.c  4.c  6.c  6.h  7.c  8.h  8_main.c  meson.build
src/chapter_3/: 1_main.c  2_main.c  3.c  3.h  3_main.c  4_main.c  5.c  5.h  5_main.c  meson.build
test/chapter_1/: meson.build  test_3.c  test_4.c  test_6.c  test_7.c  test_8.c
test/chapter_2/: meson.build
test/chapter_3/: meson.build  test_3.c  test_5.c
