cases = [
          ['test_3.c'],
          ['test_4.c'],
          ['test_6.c']
        ]

test('Chapter 1, Programming Project 3', executable('test_chapter_1_3', cases[0], dependencies: [ chapter_1_3_dep, unity_dep ]))
test('Chapter 1, Programming Project 4', executable('test_chapter_1_4', cases[1], dependencies: [ chapter_1_4_dep, unity_dep ]))
test('Chapter 1, Programming Project 6', executable('test_chapter_1_6', cases[2], dependencies: [ chapter_1_6_dep, unity_dep ]))
