cases = [
          ['test_3.c'],
          ['test_4.c'],
          ['test_6.c'],
          ['test_7.c'],
          ['test_8.c']
        ]

test('Chapter 2, Programming Project 3', executable('test_chapter_2_3', cases[0], dependencies: [ chapter_2_3_dep, unity_dep ]))
test('Chapter 2, Programming Project 4', executable('test_chapter_2_4', cases[1], dependencies: [ chapter_2_4_dep, unity_dep ]))
test('Chapter 2, Programming Project 6', executable('test_chapter_2_6', cases[2], dependencies: [ chapter_2_6_dep, unity_dep ]))
test('Chapter 2, Programming Project 7', executable('test_chapter_2_7', cases[3], dependencies: [ chapter_2_7_dep, unity_dep ]))
test('Chapter 2, Programming Project 8', executable('test_chapter_2_8', cases[4], dependencies: [ chapter_2_8_dep, unity_dep ]))
