cases = [
          ['test_3.c'],
          ['test_5.c'],
        ]

test('Chapter 3, Programming Project 3', executable('test_chapter_3_3', cases[0], dependencies: [ chapter_3_3_dep, unity_dep ]))
test('Chapter 3, Programming Project 5', executable('test_chapter_3_5', cases[1], dependencies: [ chapter_3_5_dep, unity_dep ]))
